// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: basicMaterial color prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from second to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-basic-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="color"
    >
      Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#7df1e8",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: basicMaterial color prepare first step: set currentSceneTreeNode test redo operate test redo two step undo step which from second to zero,redo step which from zero to second 1`] = `
<article
  className="wonder-basic-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="color"
    >
      Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#1918e8",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: basicMaterial color prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-basic-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="color"
    >
      Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#1918e8",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: basicMaterial color prepare first step: set currentSceneTreeNode test undo operate test undo one step step which from second to first 1`] = `
<article
  className="wonder-basic-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="color"
    >
      Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#7df1e8",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
</article>
`;

exports[`redo_undo: basicMaterial color prepare first step: set currentSceneTreeNode test undo operate test undo two step step which from second to zero 1`] = `
<article
  className="wonder-basic-material"
>
  <article
    className="inspector-item"
  >
    <div
      className="item-header"
      title="color"
    >
      Color
    </div>
    <div
      className="item-content item-color"
    >
      <div
        className="color-hex"
        onClick={[Function]}
        style={
          Object {
            "background": "#ffffff",
          }
        }
      />
      <div
        className="color-select"
        onClick={[Function]}
      >
        <img
          src="./public/img/color.png"
        />
      </div>
    </div>
  </article>
</article>
`;
